--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "redis": "^3.0.2",
-    "socket.io": "^3.0.3"
+    "socket.io": "^3.0.3",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
     "@types/node": "^14.14.10",
     "@types/redis": "^2.8.28",
     "@types/socket.io": "^2.1.11",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
     "@typescript-eslint/parser": "^4.9.0",
     "eslint": "^7.14.0",
