--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "redis": "^3.0.2",
+    "ioredis": "^4.19.2",
     "socket.io": "^3.0.3",
     "uuid": "^8.3.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
+    "@types/ioredis": "^4.17.8",
     "@types/node": "^14.14.10",
-    "@types/redis": "^2.8.28",
     "@types/socket.io": "^2.1.11",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
