--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon src/app.ts"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "ioredis": "^4.19.2",
