--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "ioredis": "^4.19.2",
     "nanoid": "^3.1.20",
     "shuffle-array": "^1.0.1",
-    "socket.io": "^3.0.3"
+    "socket.io": "^3.0.3",
+    "unique-names-generator": "^4.3.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
